document route to find coupons by company and refine it's queryset
